[package]
name = "chqnxyz"
version = "0.1.0"
edition = "2024"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
id3        = "1"
askama     = "0.12"
askama_axum = "0.4"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1"
log = "0.4.29"
lofty = "0.24.0"
